--- a/color_game_project/colorGame.html
+++ b/color_game_project/colorGame.html
@@ -9,10 +9,18 @@
     
 </head>
 <body>
-    <h1>The Great <span id="colorDisplay">RGB</span> Color Game</h1>
+    <h1>The Great
+        <br> 
+        <span id="colorDisplay">RGB</span> 
+        <br>
+        Color Game
+    </h1>
 
-    <div>
+    <div id="stripe">
+        <button id="reset">New Colors</button>
         <span id="message"></span>
+        <button id="easy">easy</button>
+        <button class="selected" id="hard">hard</button>
     </div>
 
     <div id="container">
